Modification d'index.html

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             labore pariatur? Omnis natus sint mollitia!
                         </p>
 
-                        <div id="last-content-link"><a href="#" id="last">En svoir Plus !</a></div>
+                        <div id="last-content-link"><a href="#" id="last">En savoir Plus !</a></div>
                         
                     </article>
                 </section>
@@ -459,12 +459,12 @@
 
                         <form id="formu" action="Contact-page.php" method="post">
                             <fieldset>
-                                <legend>votre demande !</legend>
+                                <legend>Votre Demande !</legend>
 
                                 <article id="email-content" class="window window-active">
                                     <p>
                                         <label for="name">Votre nom : </label>
-                                        <input id="name" type="text" name="name" placeholder="Entrez votre Nom ou Speudo ( Obligatoire )"><br>
+                                        <input id="name" type="text" name="name" placeholder="Entrez votre Nom ou Pseudo ( Obligatoire )"><br>
                                         <span class="error" id="errorname"></span>
                                     </p>
                     
@@ -481,7 +481,7 @@
 
                                     <p>
                                         <label for="commentaire" id="label-commentaire">Votre commentaire : </label><br>
-                                        <textarea id="commentaire" cols="30" rows="10" placeholder="Entrez votre commentaire ( Facultatif )"></textarea>
+                                        <textarea id="commentaire" cols="30" rows="10" placeholder="Entrez votre commentaire ( Obligatoire )"></textarea>
                                     </p>
 
                                     <input type="submit" value="Validez vos données" id="submit">
@@ -527,7 +527,7 @@
                     </div>
                 </div>
 
-                <h3>Copyrigth &#169; 2023</h3>
+                <h3>Copyright &copy; 2023 &copysr;</h3>
             </div>
         </footer>
 
